--- a/recipe-finder/frontend/package.json
+++ b/recipe-finder/frontend/package.json
@@ -18,7 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start saas-watch",
+    "sass-watch": "sass --watch src/scss:src/css",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
